--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
+swig==4.1.1.post1
 mujoco==2.2.0
 gym==0.25.2
 tensorboard==2.10.0
-tensorboardX==2.6.2.2
+tensorboardX==2.5
 matplotlib==3.5.3
 ipython==7.34.0
 moviepy==1.0.3
@@ -9,7 +10,6 @@ pyvirtualdisplay==3.0
 torch==1.12.1
 opencv-python==4.6.0.66
 ipdb==0.13.9
-swig==4.0.2
+swig==4.1.1.post1
 box2d-py==2.3.8
 numpy==1.26.2
-swig==4.1.1
